# zfs-feature-discovery

./: .gitignore  .pre-commit-config.yaml  README.md  index.yaml  pyproject.toml
.github/: release.py
.github/workflows/: check.yaml  docker-build.yaml  helm-release.yaml  lint.yaml  tag-helm-releases.yaml  tag-release.yaml
deployments/helm/zfs-feature-discovery/: Chart.yaml  README.md  values.yaml
deployments/helm/zfs-feature-discovery/templates/: _helpers.tpl  configmap-zfs-bin.yaml  configmap.yaml  daemonset.yaml  openebs-feature-rule.yaml
docker/: Dockerfile  Dockerfile.devel
zfs_feature_discovery/: __init__.py  cli.py  config.py  features.py  zfs_globals.py  zfs_props.py  zpool.py
zfs_feature_discovery/tests/: conftest.py  test_cli.py  test_config.py  test_features.py  test_zfs_globals.py  test_zpool.py
zfs_feature_discovery/tests/fixtures/: zfs_get_dataset_test1_output.txt  zfs_get_dataset_test2_output.txt  zfs_get_zvol_zvol1_output.txt  zpool_get_output.txt
